M5.1 Stage a vectorized column by the column, not by the row
BulkColumnarDoubleGather has been in the tree and unreachable since it was
written, and the note that it is unreachable because "the operator stages per
row" understates it: the signature could not have worked. It took
(List<RowData>, from, to), and Flink's vectorized readers hand out ONE
ColumnarRowData and call setRowId on it per row while the Table planner
force-enables object reuse, so that list is one object repeated -- every element
reporting whatever row the reader has since reached. It would have read the last
row's id as the run's start and copied from the wrong offset, silently, with
entirely plausible values in it. This is a redesign of a path that was never
correct, not the wiring-up of one that was.

So the gather buffers and the caller does not. acceptBulk goes; RowGather gains
flush(). accept() holds a run's bounds while each row continues it -- same
vector, next row id, next staging position -- and flush() issues one
MemorySegment.copy. Per row that is two field reads and three comparisons,
against a virtual accessor call with its bounds and null checks and a store into
the staging buffer. Rows are never retained, which is what object reuse
requires.

Both operators flush before executing, and GpuCalcOperator flushes before the
null branch writes a staging column by hand -- a pending run would otherwise
copy over the benign value it puts there.

The reflection is gone with it. flink-table-common now exposes
getVectorizedColumnBatch, getRowId and hasNulls (1601465152d), which is what the
class comment said the privateLookupIn was standing in for. hasNulls matters
more than it looks: isNullAt answers per row, and asking per row is the cost the
copy exists to remove.

tier() was documented as being "for the metrics report" and no report called it,
so the one thing this task needs to be able to see -- whether the bulk path
actually ran -- was not observable. Both operators now report the tiers,