@@ -23,71 +23,41 @@ import org.apache.flink.table.data.columnar.ColumnarRowData;
 import org.apache.flink.table.data.columnar.vector.ColumnVector;
 import org.apache.flink.table.data.columnar.vector.VectorizedColumnBatch;
 import org.apache.flink.table.data.columnar.vector.heap.HeapDoubleVector;
-import org.apache.flink.table.data.columnar.vector.writable.AbstractWritableVector;
 
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.ValueLayout;
-import java.lang.invoke.MethodHandles;
-import java.lang.invoke.VarHandle;
-import java.util.List;
 
 /**
- * Tier 1, bulk path — copies a whole run of rows out of a {@link VectorizedColumnBatch} in one
- * {@link MemorySegment#copy} instead of per-row accessor calls.
+ * Tier 1, bulk path -- copies runs of rows out of a {@link VectorizedColumnBatch} with one {@link
+ * MemorySegment#copy} instead of an accessor call per row.
  *
- * <p>This is the only gather that attacks the host-side staging cost rather than paying it: a
+ * <p>This is the only gather that attacks the host-side staging cost rather than paying it. A
  * vectorized Parquet/ORC source has already produced the column packed and column-major, so there
- * is no transposition to do. The rest is a memcpy from the heap {@code double[]} into the off-heap
- * staging buffer.
+ * is no transposition to do and the rest is a memcpy from the heap {@code double[]} into the
+ * off-heap staging buffer.
  *
- * <h2>Reaching the batch</h2>
+ * <h2>Why it buffers instead of being handed a list of rows</h2>
  *
- * <p>{@link ColumnarRowData} exposes {@code setVectorizedColumnBatch} and {@code setRowId} but no
- * getters, so the batch is read reflectively here. That works because {@code flink-table-common} is
- * an ordinary classpath jar and therefore in the unnamed module — no {@code --add-opens} needed.
- * The handles are resolved once, statically, so the per-run cost is a plain field read.
+ * <p>Because there is no list to be handed. Flink's vectorized readers hand out one {@link
+ * ColumnarRowData} and call {@code setRowId} on it per row, and the Table planner force-enables
+ * object reuse in batch mode, so rows collected into a list are one object repeated -- every
+ * element reporting whatever row the reader has since reached. An earlier version of this class
+ * took {@code (List<RowData>, from, to)} and would have read the last row's id as the run's start:
+ * a copy from the wrong offset, silently, with entirely plausible values in it.
  *
- * <p>Reflection is a stand-in for a five-line accessor patch to {@code flink-table-common}. It is
- * used here so the tier can be measured before committing to the patch, not as the intended
- * long-term mechanism.
+ * <p>So {@link #accept} holds the run's bounds and nothing else: while each row continues the run
+ * -- same batch, next row id, next staging position -- it records that and returns, and {@link
+ * #flush} issues the copy. Per row that is two field reads and three comparisons, against a virtual
+ * accessor call with its bounds and null checks.
  *
  * <h2>When the bulk path is not valid</h2>
  *
- * <p>{@link #acceptBulk} refuses and falls back to per-row access unless the column is a plain
- * {@link HeapDoubleVector} with no dictionary and no nulls. Both conditions produce silently wrong
- * values rather than failures if ignored: a dictionary-encoded vector holds IDs rather than values,
- * and a null slot holds whatever was last written there.
+ * <p>A run is only started for a plain {@link HeapDoubleVector} with no dictionary and no nulls;
+ * anything else falls back to per-row access. Both conditions produce silently wrong values rather
+ * than failures if ignored: a dictionary-encoded vector holds ids rather than values, and a null
+ * slot holds whatever was last written there.
  */
 public final class BulkColumnarDoubleGather implements RowGather {
-
-    private static final VarHandle BATCH;
-    private static final VarHandle ROW_ID;
-
-    /** {@code noNulls} is protected; {@code hasDictionary()} next to it is public. */
-    private static final VarHandle NO_NULLS;
-
-    static {
-        try {
-            MethodHandles.Lookup lookup =
-                    MethodHandles.privateLookupIn(ColumnarRowData.class, MethodHandles.lookup());
-            BATCH =
-                    lookup.findVarHandle(
-                            ColumnarRowData.class,
-                            "vectorizedColumnBatch",
-                            VectorizedColumnBatch.class);
-            ROW_ID = lookup.findVarHandle(ColumnarRowData.class, "rowId", int.class);
-            MethodHandles.Lookup vectorLookup =
-                    MethodHandles.privateLookupIn(
-                            AbstractWritableVector.class, MethodHandles.lookup());
-            NO_NULLS =
-                    vectorLookup.findVarHandle(
-                            AbstractWritableVector.class, "noNulls", boolean.class);
-        } catch (ReflectiveOperationException e) {
-            throw new ExceptionInInitializerError(
-                    "ColumnarRowData layout changed; the bulk columnar gather needs updating: "
-                            + e);
-        }
-    }
 
     private final int field;
     private final RowGather.StagingColumn target;
@@ -95,6 +65,13 @@ public final class BulkColumnarDoubleGather implements RowGather {
 
     private long bulkRows;
     private long perRowRows;
+
+    /** The vector the pending run is copied from, or null when no run is pending. */
+    private HeapDoubleVector runVector;
+
+    private int runStartRowId;
+    private int runStartPosition;
+    private int runLength;
 
     public BulkColumnarDoubleGather(
             int field, RowGather.StagingColumn target, MemorySegment targetSegment) {
@@ -105,60 +82,66 @@ public final class BulkColumnarDoubleGather implements RowGather {
 
     @Override
     public void accept(RowData row, int position) {
+        if (!(row instanceof ColumnarRowData columnar)) {
+            // Not reachable through forColumn, which picks this gather from the first row's class.
+            // Still worth not corrupting the buffer if a plan ever mixes implementations.
+            flush();
+            perRowRows++;
+            target.set(position, row.getDouble(field));
+            return;
+        }
+        VectorizedColumnBatch batch = columnar.getVectorizedColumnBatch();
+        int rowId = columnar.getRowId();
+
+        if (runVector != null
+                && batch.columns[field] == runVector
+                && rowId == runStartRowId + runLength
+                && position == runStartPosition + runLength) {
+            runLength++;
+            return;
+        }
+
+        flush();
+
+        ColumnVector column = batch.columns[field];
+        if (column instanceof HeapDoubleVector vector && copyable(vector)) {
+            runVector = vector;
+            runStartRowId = rowId;
+            runStartPosition = position;
+            runLength = 1;
+            return;
+        }
         perRowRows++;
-        target.set(position, ((ColumnarRowData) row).getDouble(field));
+        target.set(position, columnar.getDouble(field));
     }
 
     /**
-     * Copies as many rows from {@code rows[from..to)} as share one column batch and are laid out
-     * consecutively within it.
+     * Whether a range of this vector can be copied as it stands.
      *
-     * @return the number of rows consumed; 0 means the caller should fall back to per-row access
+     * <p>Both questions are asked once per run rather than once per row, which is the point: {@code
+     * isNullAt} would answer the second one per slot and that is exactly the per-row cost the copy
+     * exists to remove. {@code hasNulls} is the counterpart of {@code hasDictionary} and was added
+     * to {@code AbstractWritableVector} for this.
      */
+    private boolean copyable(HeapDoubleVector vector) {
+        return !vector.hasDictionary() && !vector.hasNulls();
+    }
+
     @Override
-    public int acceptBulk(List<RowData> rows, int from, int to, int position) {
-        RowData head = rows.get(from);
-        if (!(head instanceof ColumnarRowData)) {
-            return 0;
+    public void flush() {
+        if (runVector == null) {
+            return;
         }
-        VectorizedColumnBatch batch = (VectorizedColumnBatch) BATCH.get((ColumnarRowData) head);
-        ColumnVector column = batch.columns[field];
-        if (!(column instanceof HeapDoubleVector vector)) {
-            return 0;
-        }
-        if (vector.hasDictionary() || !((boolean) NO_NULLS.get(vector))) {
-            return 0;
-        }
-
-        int startRowId = (int) ROW_ID.get((ColumnarRowData) head);
-
-        // Extend the run while rows stay in this batch and stay consecutive. Flink's readers
-        // produce rows in order, so this normally runs to the end of the batch in one step.
-        int run = 1;
-        while (from + run < to) {
-            RowData next = rows.get(from + run);
-            if (!(next instanceof ColumnarRowData)) {
-                break;
-            }
-            if (BATCH.get((ColumnarRowData) next) != batch) {
-                break;
-            }
-            if ((int) ROW_ID.get((ColumnarRowData) next) != startRowId + run) {
-                break;
-            }
-            run++;
-        }
-
         MemorySegment.copy(
-                vector.vector,
-                startRowId,
+                runVector.vector,
+                runStartRowId,
                 targetSegment,
                 ValueLayout.JAVA_DOUBLE,
-                (long) position * Double.BYTES,
-                run);
-
-        bulkRows += run;
-        return run;
+                (long) runStartPosition * Double.BYTES,
+                runLength);
+        bulkRows += runLength;
+        runVector = null;
+        runLength = 0;
     }
 
     @Override
